--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
 </head>
 <body>
 <h1>WELCOME TO GIT</h1>
+<h1>this is a trial</h1>
 <p>COLLABORATION IN GIT</p>
-
+<p>we are learning how to carry out the collaboration on github.</p>
 </body>
 </html>
